; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/kvm/extr_mips.c_kvm_vm_ioctl_clear_dirty_log.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/kvm/extr_mips.c_kvm_vm_ioctl_clear_dirty_log.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (%struct.kvm*, %struct.kvm_memory_slot*)* }
%struct.kvm = type { i32 }
%struct.kvm_memory_slot = type { i32 }
%struct.kvm_clear_dirty_log = type { i32 }
%struct.kvm_memslots = type { i32 }

@kvm_mips_callbacks = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kvm_vm_ioctl_clear_dirty_log(%struct.kvm* %0, %struct.kvm_clear_dirty_log* %1) #0 {
  %3 = alloca %struct.kvm*, align 8
  %4 = alloca %struct.kvm_clear_dirty_log*, align 8
  %5 = alloca %struct.kvm_memslots*, align 8
  %6 = alloca %struct.kvm_memory_slot*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.kvm* %0, %struct.kvm** %3, align 8
  store %struct.kvm_clear_dirty_log* %1, %struct.kvm_clear_dirty_log** %4, align 8
  store i32 0, i32* %7, align 4
  %9 = load %struct.kvm*, %struct.kvm** %3, align 8
  %10 = getelementptr inbounds %struct.kvm, %struct.kvm* %9, i32 0, i32 0
  %11 = call i32 @mutex_lock(i32* %10)
  %12 = load %struct.kvm*, %struct.kvm** %3, align 8
  %13 = load %struct.kvm_clear_dirty_log*, %struct.kvm_clear_dirty_log** %4, align 8
  %14 = call i32 @kvm_clear_dirty_log_protect(%struct.kvm* %12, %struct.kvm_clear_dirty_log* %13, i32* %7)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %7, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %31

17:                                               ; preds = %2
  %18 = load %struct.kvm*, %struct.kvm** %3, align 8
  %19 = call %struct.kvm_memslots* @kvm_memslots(%struct.kvm* %18)
  store %struct.kvm_memslots* %19, %struct.kvm_memslots** %5, align 8
  %20 = load %struct.kvm_memslots*, %struct.kvm_memslots** %5, align 8
  %21 = load %struct.kvm_clear_dirty_log*, %struct.kvm_clear_dirty_log** %4, align 8
  %22 = getelementptr inbounds %struct.kvm_clear_dirty_log, %struct.kvm_clear_dirty_log* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call %struct.kvm_memory_slot* @id_to_memslot(%struct.kvm_memslots* %20, i32 %23)
  store %struct.kvm_memory_slot* %24, %struct.kvm_memory_slot** %6, align 8
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** @kvm_mips_callbacks, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32 (%struct.kvm*, %struct.kvm_memory_slot*)*, i32 (%struct.kvm*, %struct.kvm_memory_slot*)** %26, align 8
  %28 = load %struct.kvm*, %struct.kvm** %3, align 8
  %29 = load %struct.kvm_memory_slot*, %struct.kvm_memory_slot** %6, align 8
  %30 = call i32 %27(%struct.kvm* %28, %struct.kvm_memory_slot* %29)
  br label %31

31:                                               ; preds = %17, %2
  %32 = load %struct.kvm*, %struct.kvm** %3, align 8
  %33 = getelementptr inbounds %struct.kvm, %struct.kvm* %32, i32 0, i32 0
  %34 = call i32 @mutex_unlock(i32* %33)
  %35 = load i32, i32* %8, align 4
  ret i32 %35
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @kvm_clear_dirty_log_protect(%struct.kvm*, %struct.kvm_clear_dirty_log*, i32*) #1

declare dso_local %struct.kvm_memslots* @kvm_memslots(%struct.kvm*) #1

declare dso_local %struct.kvm_memory_slot* @id_to_memslot(%struct.kvm_memslots*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
